# Pestilence

./: CMakeLists.txt  Makefile
include/: pestilence.inc
src/: pestilence.asm
